# RotaTakipliOtonomSulamaAraci

./: .env.example  Makefile  README.md  plant_robot.db  setup_pc.bat  setup_pc.sh  setup_rpi.sh  start_pc.bat  start_pc.sh  start_rpi.sh
ai_server/: main.py  requirements.txt  run_pc.py
ai_server/providers/: base_provider.py  dummy_provider.py  yolo_provider.py
backend/: database.py  main.py
backend/frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
backend/frontend/src/: App.jsx  index.css
backend/models/: schema.py
backend/static/: index.html
backend/static/assets/: index-BOyJ08mt.css  index-Bwcjaqg6.js  index-BzGjDWxW.js  index-DvLT0PiD.css
deployment/pc/: setup_pc.bat  setup_pc.sh  start_pc.bat  start_pc.sh
deployment/rpi/: setup_rpi.py  setup_rpi.sh  start_rpi.sh
ros2_ws/src/plant_bot/: package.xml  setup.cfg  setup.py
ros2_ws/src/plant_bot/launch/: pc_sim_launch.py  robot_launch.py
ros2_ws/src/plant_bot/plant_bot/: __init__.py
ros2_ws/src/plant_bot/plant_bot/hardware/: gpio_wrapper.py
ros2_ws/src/plant_bot/plant_bot/nodes/: __init__.py  ai_client_node.py  backend_bridge_node.py  camera_node.py  mapping_node.py  motion_control_node.py  plant_task_manager.py  route_planner_node.py  soil_probe_node.py  water_level_node.py  watering_node.py
ros2_ws/src/plant_bot/urdf/: plant_bot.urdf
ros2_ws/src/plant_bot/worlds/: farm.world
scripts/: telemetry_sim.py
scripts/control_panel/: app.py  requirements.txt
scripts/control_panel/ui/: index.html
shared/models/: common.py
shared/utils/: env_checker.py  logger.py
(+1 files in other folders)
